--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -2,8 +2,8 @@
 <mat-sidenav-container class="example-container bg-body"  autosize>
   <mat-sidenav #sidenav mode="side">
     <p><button mat-button (click)="sidenav.close()"><mat-icon>close</mat-icon></button></p>
-    <button routerLink="/about">about</button>
-    <button routerLink="/home">Home</button>
+    <button mat-raised-button routerLink="/about">about</button>
+    <button mat-raised-button routerLink="/home">Home</button>
   </mat-sidenav>
 
   <mat-sidenav-content>
