--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <p>home works!<mat-icon>home</mat-icon></p>
 <div class="container">
-    <h1> Angular 13</h1>
+    <h1> Angular </h1>
     
     <div class="card">
       <div class="card-header">
