--- a/src/app/pages/listing/listing.component.html
+++ b/src/app/pages/listing/listing.component.html
@@ -36,6 +36,12 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"  (click)="onRowClicked(row)"></tr>
 
 </table>
-<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons  [length]="totalCount"
-[pageSize]="pageSize"></mat-paginator>
+<mat-paginator 
+[pageSizeOptions]="[5, 10, 20]" 
+showFirstLastButtons="true"  
+[length]="totalCount"
+[pageSize]="pageSize"
+[pageIndex]="currentPage"
+(page)="pageEvent = handlePage($event)"
+></mat-paginator>
 
