--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -93,7 +93,7 @@
             </div>
 
             <mat-card-actions>
-                <button mat-button color="accent" (click)="reset()">Reset</button>
+                <button mat-button color="accent" type="reset" (click)="reset()">Reset</button>
                 <button mat-raised-button color="primary" type="submit">Sign Up Here</button>
             </mat-card-actions>
         </form>
