--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,2 +1,5 @@
+<div class="container">
 <p>about works!</p>
-<button (click)="pubnubService()">fire</button>
+<button (click)="pubnubService()">fire</button> <br>
+<button mat-raised-button (click)="goto()">Account</button>
+</div>
