--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-<p>about works!</p>
-<button (click)="pubnubService()">fire</button> <br>
-<button mat-raised-button (click)="goto()">Account</button>
+    <p>about works!</p>
+    <button mat-button (click)="pubnubService()">fire</button> <br>
+    <button mat-raised-button (click)="goto()">Account</button>
 </div>
