--- a/src/app/pages/listing/listing.component.html
+++ b/src/app/pages/listing/listing.component.html
@@ -6,6 +6,7 @@
   <input matInput #searchinput>
 </mat-form-field>
 <button mat-raised-button color="primary" (click)="applyfilter(searchinput)">Search</button>
+<button mat-raised-button color="primary" class="mx-2" (click)="router.navigateByUrl('users/addnotes')">Add Notes</button>
 </div>
 <table mat-table [dataSource]="users" class="mat-elevation-z8 w-75 mx-auto my-0">
  <!-- Position Column -->
@@ -30,6 +31,15 @@
   <ng-container matColumnDef="website">
     <th mat-header-cell *matHeaderCellDef> Website </th>
     <td mat-cell *matCellDef="let element"> {{element.website}} </td>
+  </ng-container>
+
+  <!-- Action Column -->
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Actions </th>
+    <td mat-cell *matCellDef="let element"> 
+    <button mat-raised-button (click)="editNotes(element.id)" matTooltip="Edit"> <mat-icon>edit</mat-icon></button>
+    <button mat-raised-button (click)="deleteNotes(element.id)" matTooltip="Delete" >  <mat-icon>delete</mat-icon></button>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
