adding custom directive

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,12 +3,12 @@
   <h1> Angular </h1>
 
   <div class="card">
-    <div class="card-header">
+    <div class="card-header" >
       Featured by {{display | upperCase}}
     </div>
     <div class="card-body">
       <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text" apphighlight="black" apphighlight>With supporting text below as a natural lead-in to additional content.</p>
       <a href="/about" class="btn btn-primary">Go somewhere</a>
       <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]">
       </mat-paginator>
