--- a/src/app/pages/listing/listing.component.html
+++ b/src/app/pages/listing/listing.component.html
@@ -29,7 +29,7 @@
 
   <!-- Website Column -->
   <ng-container matColumnDef="website">
-    <th mat-header-cell *matHeaderCellDef> Website </th>
+    <th mat-header-cell *matHeaderCellDef> Website476364 </th>
     <td mat-cell *matCellDef="let element"> {{element.website}} </td>
   </ng-container>
 
@@ -39,7 +39,7 @@
     <td mat-cell *matCellDef="let element"> 
     <button mat-raised-button (click)="editNotes(element.id)" matTooltip="Edit"> <mat-icon>edit</mat-icon></button>
     <button mat-raised-button (click)="deleteNotes(element.id)" matTooltip="Delete" >  <mat-icon>delete</mat-icon></button>
-    <button mat-raised-button (click)="viewDetails()" matTooltip="View details" ><mat-icon>apps</mat-icon></button>
+    <button mat-raised-button (click)="viewDetails()" matTooltip="View details" ><mat-icon>visibility</mat-icon></button>
     </td>
   </ng-container>
 
