--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -34,4 +34,9 @@
         <label for="keepAfterRouteChange">Display alert after one route change</label>
     </div>
 </div>
+  <owl-carousel-o [options]="customOptions">
+    <ng-template carouselSlide [width]="100">Slide 1</ng-template>
+    <ng-template carouselSlide [width]="100">Slide 2</ng-template>
+    <ng-template carouselSlide [width]="100">Slide 3</ng-template>
+  </owl-carousel-o>
 </div>
